# Apparatus

./: .gitignore  CMakeLists.txt  README.md  Test.cpp  elements.txt  vec2.hpp  vec2.inl  vec3.inl
Core/Algebra/Header/: quadratic.h
Core/Header/: sorting.h  sorting2.h
Core/LinearAlgebra/: matrices.hpp  matrix_2x2.hpp  matrix_2x3.hpp  matrix_2x4.hpp  matrix_3x2.hpp  matrix_3x3.hpp  matrix_3x4.hpp  matrix_4x2.hpp  matrix_4x3.hpp  matrix_4x4.hpp  testing.cpp  vector_in_typedef.hpp
Core/LinearAlgebra/Matrix/: MatrixDemo.cpp  matrices.hpp  matrix.hpp  matrix_2x2.hpp  matrix_2x3.hpp  matrix_2x4.hpp  matrix_3x2.hpp  matrix_3x3.hpp  matrix_3x4.hpp  matrix_4x2.hpp  matrix_4x3.hpp  matrix_4x4.hpp  matrix_generic.hpp  matrix_in.hpp  matrix_in_test.cpp  matrix_in_typedef.cpp  matrix_in_typedef.hpp
Core/LinearAlgebra/Testing/: matrix2.cpp  matrix2.hpp  matrix2.inl  vector2.cpp  vector2.hpp  vector2.inl  vector_test.cpp
Core/LinearAlgebra/Testing/Inherited/: vector_in.cpp  vector_in.hpp  vector_in_test.cpp  vector_in_typedef.hpp
Core/LinearAlgebra/Testing/Non-Inherited/: vector2.cpp  vector2.hpp  vector_test.cpp
Core/LinearAlgebra/Vector/: vector.hpp  vector_2.hpp  vector_3.hpp  vector_4.hpp  vector_generic.hpp  vector_in.hpp  vectors.hpp
Core/Numerical/: numerical.h
Core/Numerical/Header/: numerical.h
Core/Sorting/Header/: sorting.h
Core/Sorting/Source/: sorting.cpp
Core/Source/: quicksort.cpp  sorting.cpp
Core/Statistics/: statistics.hpp
Examples/: InsertionSort.java  MatrixDemo.cpp  MatrixDemo2.cpp  SortingDemo.cpp  VectorDemo.cpp  hailstorm.py
FTC/: Matrix.h  Matrix.java  Vector.java
FTC/PurePursuit/: controller.h
FTC/PurePursuit/Geometry/: Point.h  Pose.h  profiling.h
Testing/: InsertionSort.java  elements.java  hello.cpp  mat3.cpp  mat3.h  mat4.cpp  test.out  vec3.cpp  vec3.h  vec3_test.cpp  vector3.cpp  vector3.h  vector3_test.cpp
Testing/Matrix/: mat3.cpp  mat3.h  mat3_test.cpp  mat4.h
Testing/SubfolderTest/: funny.cpp  mat3.cpp  mat3.h  mat3_test.cpp  mat4.cpp  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
Testing/Vector/: vec3.cpp  vec3.h  vec4.cpp  vec4.h
linalg/: mat2.hpp  mat3.hpp  mat3.inl  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl
pathfinding/: AStar.hpp  AStar.inl  A_Star.hpp  A_Star.inl  Grid.hpp  Grid.inl  Map.hpp  Node.hpp  Node.inl  astar.hpp
testing/linalg/: VecTest.cpp
testing/pathfinding/: PathCreationTest.cpp
